fix(backend): resolve IDE warnings and clean up tests
- Replace deprecated @Schema(required) with requiredMode
- Remove unused imports, fields, and redundant TODO comments
- Fix unchecked JSON and Mockito generics in services and tests
- Use URI.create().toURL() where URL(String) is deprecated
- Minor logging and type-safety improvements

Made-with: Cursor